# persona-steering-for-agents

./: .cursorrules  .gitignore  README.md  TODO.md  app.py  check_environment.py  clustering.py  database.py  environment.yml  main.py  models.py  personas.csv  pyproject.toml  query_answerer.py  reset_database.py  rewrite.py  run_tests.py  test_api.py  test_data.json  test_query_api.py
agent_notes/: 0_Prompt_Rewrite.md  1_Demo_Interface.md
app/: main.py  run_backend.sh
app/data/: create_mock_data.py
app/models/: schema.py
app/services/: clusterer.py  llm_provider.py  prompt_summarizer.py  rewriter.py
app/utils/: loader.py
backend/: main.py  run_tests.sh
backend/services/: clusterer.py  llm_provider.py  prompt_summarizer.py  rewriter.py
backend/tests/: README.md  test_clusterer.py  test_main.py  test_rewriter.py
backend/utils/: loader.py
data/: persona_responses.json  persona_vectors.pt
frontend/: README.md  api_client.py  config.py  main.py  run_frontend.sh  sample_queries.csv  sample_users.csv  test_frontend.py  utils.py
notebooks/: 01_persona_data_generation.ipynb  02_persona_steering.ipynb  personalization_rewrite.ipynb
notebooks/.ipynb_checkpoints/: personalization_prompt-checkpoint.ipynb
pages/: 1_Compare.py  2_Chat.py
src/: activation_hooks.py  api_client.py  persona_vectors.py  personas.py
tests/: test_api.py  test_clusterer.py  test_loader.py  test_rewriter.py
